Corrected Alignment Problem

--- a/src/App.css
+++ b/src/App.css
@@ -120,8 +120,9 @@ body{
 }
 
 #repo{
-  width: fit-content;
+  width: inherit;
   margin: auto;
+  word-wrap:break-word;
 }
 
 #info{
